Add bcmath and unzip

--- a/7.1/alpine/Dockerfile
+++ b/7.1/alpine/Dockerfile
@@ -20,11 +20,12 @@ RUN apk update && apk upgrade \
     freetype-dev \
     libjpeg-turbo-dev \
     libpng-dev \
-  && apk add --no-cache git icu libmcrypt freetype libpng libjpeg-turbo \
+  && apk add --no-cache git unzip icu libmcrypt freetype libpng libjpeg-turbo \
   && docker-php-ext-configure gd --with-freetype-dir=/usr/include/ \
     --with-png-dir=/usr/include/ \
     --with-jpeg-dir=/usr/include/ \
   && docker-php-ext-install gd \
+    bcmath \
     mcrypt \
     intl \
     zip \
