--- a/7.1/stretch/Dockerfile
+++ b/7.1/stretch/Dockerfile
@@ -17,11 +17,13 @@ RUN apt-get update \
     wget \
     curl \
     git \
+    unzip \
     libmcrypt-dev \
   && docker-php-ext-configure gd --with-freetype-dir=/usr/include/ \
     --with-png-dir=/usr/include/ \
     --with-jpeg-dir=/usr/include/ \
   && docker-php-ext-install gd \
+    bcmath \
     mcrypt \
     intl \
     zip \
