--- a/7.3/alpine/Dockerfile
+++ b/7.3/alpine/Dockerfile
@@ -20,11 +20,12 @@ RUN apk update && apk upgrade \
     libjpeg-turbo-dev \
     libpng-dev \
     libzip-dev \
-  && apk add --no-cache git icu freetype libzip libpng libjpeg-turbo \
+  && apk add --no-cache git unzip icu freetype libzip libpng libjpeg-turbo \
   && docker-php-ext-configure gd --with-freetype-dir=/usr/include/ \
     --with-png-dir=/usr/include/ \
     --with-jpeg-dir=/usr/include/ \
   && docker-php-ext-install gd \
+    bcmath \
     intl \
     zip \
     pdo_mysql \
