Add soap extension

--- a/7.1/stretch/Dockerfile
+++ b/7.1/stretch/Dockerfile
@@ -29,6 +29,7 @@ RUN apt-get update \
     zip \
     pdo_mysql \
     opcache \
+    soap \
     iconv \
   && pecl install xdebug redis \
   && docker-php-ext-enable redis \
