--- a/7.3/alpine/Dockerfile
+++ b/7.3/alpine/Dockerfile
@@ -30,6 +30,7 @@ RUN apk update && apk upgrade \
     zip \
     pdo_mysql \
     opcache \
+    soap \
     iconv \
   && pecl install xdebug-beta redis \
   && docker-php-ext-enable redis \
