--- a/7.1/alpine/Dockerfile
+++ b/7.1/alpine/Dockerfile
@@ -31,6 +31,7 @@ RUN apk update && apk upgrade \
     zip \
     pdo_mysql \
     opcache \
+    soap \
     iconv \
   && pecl install xdebug redis \
   && docker-php-ext-enable redis \
