--- a/7.1/stretch/Dockerfile
+++ b/7.1/stretch/Dockerfile
@@ -30,6 +30,7 @@ RUN apt-get update \
     pdo_mysql \
     opcache \
     soap \
+    sockets \
     iconv \
   && pecl install xdebug redis \
   && docker-php-ext-enable redis \
