--- a/7.2/alpine/Dockerfile
+++ b/7.2/alpine/Dockerfile
@@ -30,6 +30,7 @@ RUN apk update && apk upgrade \
     pdo_mysql \
     opcache \
     soap \
+    sockets \
     iconv \
   && pecl install xdebug redis \
   && docker-php-ext-enable redis \
