--- a/7.3/alpine/Dockerfile
+++ b/7.3/alpine/Dockerfile
@@ -31,6 +31,7 @@ RUN apk update && apk upgrade \
     pdo_mysql \
     opcache \
     soap \
+    sockets \
     iconv \
   && pecl install xdebug-beta redis \
   && docker-php-ext-enable redis \
