--- a/7.3/stretch/Dockerfile
+++ b/7.3/stretch/Dockerfile
@@ -31,7 +31,7 @@ RUN apt-get update \
     soap \
     sockets \
     iconv \
-  && pecl install xdebug-beta redis \
+  && pecl install xdebug redis \
   && docker-php-ext-enable redis \
   && rm -rf /tmp/pear ~/.pearrc /var/tmp/* /tmp/*
 
@@ -41,7 +41,7 @@ RUN { \
     } > /usr/local/bin/php-xdebug \
     && chmod +x /usr/local/bin/php-xdebug
 
-COPY --from=composer:1.7 /usr/bin/composer /usr/bin/composer
+COPY --from=composer:1.9 /usr/bin/composer /usr/bin/composer
 
 RUN composer global require \
     hirak/prestissimo \
